test/files/neg/t6666d.check
t6666d.scala:7: error: Implementation restriction: access of object TreeOrd$1 from object TreeOrd$2, would require illegal premature access to the unconstructed `this` of class Test
    implicit object TreeOrd extends Ordering[K](){
                    ^
one error found
